[gd_scene load_steps=2 format=3 uid="uid://785s1sggfm4v"]

[ext_resource type="Script" path="res://src/gui/strike_row.gd" id="1_2tmsa"]

[node name="StrikeRow" type="PanelContainer"]
script = ExtResource("1_2tmsa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToHitLabel" type="Label" parent="MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Strike 3+"

[node name="DieContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="CountLabel" type="Label" parent="MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "2/3"
horizontal_alignment = 2
